--- a/Lesson_2/AboutMe/app/src/main/res/values/strings.xml
+++ b/Lesson_2/AboutMe/app/src/main/res/values/strings.xml
@@ -2,4 +2,16 @@
     <string name="app_name">AboutMe</string>
     <string name="name">Jonas Schürz</string>
     <string name="yellow_star">Yellow star</string>
+
+    <string name="bio">Die Java-Technologie (englisch Java Technology) ist eine
+        ursprünglich von Sun (heute Oracle-Gruppe) entwickelte Sammlung von Spezifikationen,
+        die zum einen die Programmiersprache Java und zum anderen verschiedene Laufzeitumgebungen
+        für Computerprogramme definieren. Diese Computerprogramme werden
+        meistens in Java geschrieben.
+        \n\nMit der Java-Technologie soll ein und dasselbe Programm auf unterschiedlichen Computersystemen laufen können.
+        \n\nDiese Plattformunabhängigkeit wird dadurch erreicht, dass der Quellcode zunächst in Bytecode kompiliert wird,
+        der erst auf dem Zielsystem von der Java-Laufzeitumgebung (Java Runtime Environment, kurz JRE) beim Starten
+        des Programms in die jeweilige Maschinensprache übersetzt wird.
+        \n\nDer Bytecode funktioniert also als Zwischencode
+        zwischen Programmiersprache und Maschinensprache. (Quelle: Wikipedia)\n\n</string>
 </resources>
