--- a/Lesson_2/AboutMe/app/src/main/res/values/strings.xml
+++ b/Lesson_2/AboutMe/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
         des Programms in die jeweilige Maschinensprache übersetzt wird.
         \n\nDer Bytecode funktioniert also als Zwischencode
         zwischen Programmiersprache und Maschinensprache. (Quelle: Wikipedia)\n\n</string>
+    <string name="what_is_your_nickname">What is your Nickname?</string>
 </resources>
