--- a/Lesson_2/AboutMe/app/src/main/res/values/strings.xml
+++ b/Lesson_2/AboutMe/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
         \n\nDer Bytecode funktioniert also als Zwischencode
         zwischen Programmiersprache und Maschinensprache. (Quelle: Wikipedia)\n\n</string>
     <string name="what_is_your_nickname">What is your Nickname?</string>
+    <string name="done">Done</string>
 </resources>
